# Fastapi

./: .gitignore  First_Hello_world_api.py
Book/: Starter_code_for_a_simple_FastAPI_web_server_serving_GPT-4o_requests.py
Project/: main.py  patients.json  synthetic_health_data.json
Project_1/: build_lambda.ps1  pyproject.toml
Project_1/src/: testdb.db
Project_1/src/project/: .env  alembic.ini  db.py  main.py  models.py
Project_1/src/project/Routers/: admin.py  auth.py  todos.py  user.py
Project_1/src/project/alembic/versions/: 1de712b83b76_create_phone_number_for_user_column.py
Project_1/src/project/static/: admin.html  dashboard.html  index.html  profile.html  register.html
Project_1/src/project/static/css/: style.css
Project_1/src/project/static/js/: admin.js  api.js  auth.js  config.js  dashboard.js  profile.js
Project_1/src/project/test/: test_admin.py  test_auth.py  test_main.py  test_todos.py  test_user.py  utils.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
